--- a/index.html
+++ b/index.html
@@ -418,8 +418,7 @@
   </button>
 </div><div class="tabs" id="tabs"></div><div id="home-content" class="home-content"><div class="recommendation"><div class="recommendation-content"><h3>REFLITA</h3><p id="daily-recommendation">Carregando recomenda&#xe7;&#xe3;o...</p></div><iframe class="recommendation-animation" src="https://lottie.host/embed/727109e7-6fe0-44f8-8e93-d168b2f9f0c2/fi5yyQLYCL.lottie" frameborder="0"></iframe></div><div class="recent-reads" id="recent-reads-section"><h2>&#xda;ltimas Aulas</h2><div class="recent-books" id="recent-books"></div></div><div class="recent-reads" id="favorites-section" style="margin-bottom: 30px;"><h2>Meus Favoritos</h2><div class="recent-books" id="favorites-books"></div></div></div><div class="filter-buttons">
   <button class="filter-btn active" data-sort="alpha">Ordem Cronol&#xf3;gica</button>
-</div><div class="books-grid" id="books-grid"></div></div><div class="iframe-modal" id="iframe-modal"><div class="iframe-container"><button class="close-btn" onclick="closeModal()">Fechar</button><iframe id="book-iframe" width="100%" height="100%" frameborder="0"></iframe></div></div><script src="https://kit.fontawesome.com/a076d05399.js"></script><script>
-const USER_STORAGE_KEY = 'user_reading_stats';
+</div><div class="books-grid" id="books-grid"></div></div><div class="iframe-modal" id="iframe-modal"><div class="iframe-container"><button class="close-btn" onclick="closeModal()">Fechar</button><iframe id="book-iframe" width="100%" height="100%" frameborder="0"></iframe></div></div><script src="https://kit.fontawesome.com/a076d05399.js"></script><script>const USER_STORAGE_KEY = 'user_reading_stats';
 let userStats = JSON.parse(localStorage.getItem(USER_STORAGE_KEY)) || {
   reads: 0,
   downloads: 0,
@@ -431,6 +430,7 @@ let courseStartTime = 0;
 let completionNotified = false;
 let completionTimeout;
 let courseAttemptCount = 0;
+let freeAccessCount = parseInt(localStorage.getItem('freeAccessCount')) || 0;
 function checkAndResetMonthlyCounts() {
   const now = new Date().getTime();
   const thirtyDays = 30 * 24 * 60 * 60 * 1000;
@@ -856,12 +856,6 @@ function showPremiumMessage() {
   document.body.appendChild(backdrop);
   backdrop.addEventListener('click', closePremiumMessage);
 }
-function closePremiumMessage() {
-  const backdrop = document.querySelector('div[style*="z-index: 10000"]');
-  if (backdrop) {
-    document.body.removeChild(backdrop);
-  }
-}
 function attachPremiumBadge() {
   const bookCovers = document.querySelectorAll('.book-cover-container');
   bookCovers.forEach(cover => {
@@ -935,42 +929,32 @@ function updateFavorites() {
     `;
     favoritesContainer.appendChild(favoriteBook);
   });
-
-  applyPremiumRestrictions(); // Re-apply restrictions after updating favorites list
+  applyPremiumRestrictions();
 }
 function applyPremiumRestrictions() {
   const favoritesBooks = document.querySelectorAll('#favorites-books .recent-book');
   const recentBooks = document.querySelectorAll('#recent-books .recent-book');
-  
-  // Disable interaction or show premium message for favorites
   favoritesBooks.forEach(book => {
     book.onclick = () => {
       if (hasReachedPremiumLimit()) {
         showPremiumMessage();
       } else {
-        // Functionality for accessing favorites
         checkPassword(book.dataset.link, book.dataset.title, book.dataset.cover);
       }
     };
-    
     attachPremiumBadgeToBook(book);
   });
-
-  // Disable interaction or show premium message for recent reads
   recentBooks.forEach(book => {
     book.onclick = () => {
       if (hasReachedPremiumLimit()) {
         showPremiumMessage();
       } else {
-        // Functionality for accessing recent reads
         checkPassword(book.dataset.link, book.dataset.title, book.dataset.cover);
       }
     };
-    
     attachPremiumBadgeToBook(book);
   });
 }
-
 function attachPremiumBadgeToBook(book) {
   let badge = book.querySelector('.premium-badge');
   if (!badge) {
@@ -982,7 +966,6 @@ function attachPremiumBadgeToBook(book) {
   }
   badge.style.display = 'block';
 }
-
 function generateRecentReadsHTML() {
   return recentReads.map(book => `
     <div class="book-card visible" data-link="${book.link}" data-title="${book.title}" data-cover="${book.cover}" style="cursor: pointer;">
@@ -994,7 +977,6 @@ function generateRecentReadsHTML() {
     </div>
   `).join('');
 }
-
 function updateRecentReads() {
   const recentContainer = document.getElementById('recent-books');
   recentContainer.innerHTML = '';
@@ -1216,10 +1198,12 @@ function showTab(tabName, btn) {
 function openBook(link, title, cover) {
   closeBookMenu();
   if (!checkCourseAttempts()) return;
-
-  if (hasReachedPremiumLimit()) {
+  let freeAccessCount = parseInt(localStorage.getItem('freeAccessCount')) || 0;
+  if (freeAccessCount >= 15) {
     showPremiumMessage();
   } else {
+    freeAccessCount++;
+    localStorage.setItem('freeAccessCount', freeAccessCount);
     checkPassword(link, title, cover);
   }
 }
@@ -1468,11 +1452,22 @@ function updateUIText() {
 }
 function openMaterialLink(link) {
   if (!checkCourseAttempts()) return;
-
   if (hasReachedPremiumLimit()) {
     showPremiumMessage();
   } else if (link) {
-    window.open(link, '_blank');
+    var freeAccessCount = localStorage.getItem('freeAccessCount');
+    if (freeAccessCount === null) {
+      freeAccessCount = 0;
+    } else {
+      freeAccessCount = parseInt(freeAccessCount);
+    }
+    if (freeAccessCount >= 15) {
+      showPremiumMessage();
+    } else {
+      freeAccessCount++;
+      localStorage.setItem('freeAccessCount', freeAccessCount);
+      window.open(link, '_blank');
+    }
   } else {
     alert('Material de apoio não disponível para este curso.');
   }
@@ -1521,12 +1516,10 @@ function closePremiumBenefits() {
     benefitsCard.remove();
   }
 }
-
 function hasReachedPremiumLimit() {
   const storedIP = localStorage.getItem('user_ip');
   return storedIP != null;
 }
-
 async function getIPAddress() {
   try {
     const response = await fetch('https://api.ipify.org?format=json');
@@ -1537,13 +1530,10 @@ async function getIPAddress() {
     return null;
   }
 }
-
 async function showPremiumMessage() {
   const userIP = await getIPAddress();
-  if (!userIP) return; // If IP cannot be fetched, do nothing.
-
+  if (!userIP) return;
   localStorage.setItem('user_ip', userIP);
-
   const backdrop = document.createElement('div');
   backdrop.style.cssText = `
     position: fixed;
@@ -1593,19 +1583,16 @@ async function showPremiumMessage() {
       transition: all 0.3s;
     " onclick="showPremiumBenefits()">Ver Vantagens</button>
   `;
-
   backdrop.appendChild(messageBox);
   document.body.appendChild(backdrop);
   backdrop.addEventListener('click', closePremiumMessage);
 }
-
 function closePremiumMessage() {
   const backdrop = document.querySelector('div[style*="z-index: 10000"]');
   if (backdrop) {
     document.body.removeChild(backdrop);
   }
 }
-
 document.addEventListener('DOMContentLoaded', () => {
   loadSheetData();
   handleScrollAnimation();
@@ -1616,6 +1603,5 @@ document.addEventListener('DOMContentLoaded', () => {
   handleSearch();
   updateUIText();
   attachPremiumBadge();
-  applyPremiumRestrictions(); // Apply premium restrictions to these sections
-});
-</script></body></html>
+  applyPremiumRestrictions();
+});</script></body></html>
